# batch11_e_cartomobile

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: e-cartomobile_ci.yml  update_bornes.yml  update_immatriculations.yml
Neo4j_container/: docker-compose.yaml
Neo4j_graph_container/: README.md  docker-compose.yaml
Neo4j_graph_container/data_communes/: communes.feather  immat.feather
Neo4j_graph_container/notebooks_analyse_and_others/: neo4j_experiment_shortest_path.ipynb
e_cartomobile/: constants.py
notebooks/: ALL_viz.ipynb  BDR_viz.ipynb  CAR_viz.ipynb  Explications.md  Html compress.ipynb  Make Communes-Bornes datasets_v1.ipynb  OCM_helper_functions.py  OSM_helper_functions.py  OSMnx copy.ipynb  ReadMe.txt  Step0A1_Graph_osm.ipynb  Step0A2_Graph_tjma.ipynb  Step0A3_Graph_interpolate_tmja.ipynb  Step0B1_Communes_boundaries_osm.ipynb  Step0B2_datas_osm copy.ipynb  Step0B3_data_tourisme.ipynb  Step0C0_Graph_routier_paths_matrix.ipynb  Step0C10_Nodes.ipynb  Step0C11_Edges.ipynb  Step0C1_Nodes.ipynb  Step0C20_Edges_src_trgt.ipynb  Step0C20_Edges_vectorialized.ipynb  Step0C21_Edges_paths.ipynb  Step0C22_Edges_paths_attributes.ipynb  Step0C24_Graph_commune_check.ipynb  Step0C2_Edges.ipynb  Step0C30_page_rank.ipynb  Step0C31_Tourism_paths.ipynb  Step0C32_Tourism_score_cuts.ipynb  Step0C33_Tourism_score_qcuts.ipynb  Step0C341_Tourism_score_plotly.ipynb  Step0C35_Tourism_score_cuts_clustering.ipynb  Step0C36_Tourism_score_qcuts_clustering.ipynb  Step0C3_Graph.ipynb  TJMA_viz.ipynb  TMJA_et_extrapolation_tourisme.ipynb  TMJA_et_extrapolation_tourisme_test_brd13.ipynb  TMJA_et_extrapolation_tourisme_test_bretagne.ipynb  TMJA_et_extrapolation_tourisme_test_paca.ipynb  TT_Api_Agent _v2.ipynb  (+24 more)
notebooks/2023_04_07_reproduce_nalron_work/: LICENSE  README.md  carte_type_de_vehicule_par_departement.ipynb  enrichissement_dataset_voitures_par_commune_et_type_de_charge.ipynb  pyproject.toml
notebooks/2023_04_07_reproduce_nalron_work/cartes_folium/: voitures_electriques_par_departement_fin_2022.html
notebooks/2023_04_07_reproduce_nalron_work/enriched_data/: forecast_pdc.csv
notebooks/2023_04_07_reproduce_nalron_work/raw_data/: communes-departement-region.csv:Zone.Identifier  departements-francais.csv:Zone.Identifier  fr-region.csv  irve-mobivesdeer17-20230403.csv  nombre-total-de-points-de-charge.csv  parc_voitures_particuliers_par_energie_et_region_2022.xlsx
pages/: 1_Données_génériques.py  2_Score_locaux.py  3_Disponibilité_des_bornes.py  4_Les_bornes_et_moi.py  99_Procédures_pour_les_collectivités.py
src/: __init__.py
tests/: __init__.py
tests/units/: placeholder.py
(+83 files in other folders)
