[tool.poetry]
name = "batch11-e-cartomobile"
version = "0.1.0"
description = "Encourager et planifier la mobilité électrique dans les territoires avec l’Open-Data."
authors = ["mromagne <michael.romagne@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "batch11_e_cartomobile"}]

# Huge mess for now, will clean when project converges
[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.20"
folium = "0.14"
jupyter = "^1.0.0"
geopandas = "^0.12.2"
isort = "^5.12.0"
pre-commit = "^3.2.2"
flake8 = "^6.0.0"
matplotlib = "^3.7.1"
requests = "^2.28.2"
seaborn = "^0.12.2"
sklearn = "^0.0.post4"
numpy = "^1.24.2"
bs4 = "^0.0.1"
ipykernel = "^6.22.0"
nbqa = "^1.7.0"
umap-learn = "^0.5.3"
pyarrow = "^11.0.0"
ipywidgets = "^8.0.6"
dask-geopandas = "^0.3.0"
ipython_genutils = "^0.2.0"
css-html-js-minify = "^2.5.5"
mapbox = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
