[tool.poetry]
name = "batch11-e-cartomobile"
version = "0.1.0"
description = "Encourager et planifier la mobilité électrique dans les territoires avec l’Open-Data."
authors = ["mromagne <michael.romagne@gmail.com>"]
license = "MIT"
readme = "README.md"

# Huge mess for now, will clean when project converges
[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<3.10" # streamlit & numba constraints 
streamlit = "1.20"
folium = "0.14"
jupyter = "^1.0.0"
geopandas = "^0.12.2"
isort = "^5.12.0"
pre-commit = "^3.2.2"
flake8 = "^6.0.0"
matplotlib = "^3.7.1"
requests = "^2.28.2"
seaborn = "^0.12.2"
sklearn = "^0.0.post4"
numpy = "^1.24.2"
bs4 = "^0.0.1"
ipykernel = "^6.22.0"
nbqa = "^1.7.0"
umap-learn = "^0.5.3"
pyarrow = "^11.0.0"
ipywidgets = "^8.0.6"
dask-geopandas = "^0.3.0"
ipython_genutils = "^0.2.0"
css-html-js-minify = "^2.5.5"
mapbox = "^0.18.1"
black = "^23.3.0"
plotly = "^5.14.1"
pandas = "1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
