[tool.poetry]
name = "base-irve-project"
version = "0.1.0"
description = ""
authors = ["mromagne <michael.romagne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
requests = "^2.28.2"
seaborn = "^0.12.2"
numpy = "^1.24.2"
sklearn = "^0.0.post1"
bs4 = "^0.0.1"
statsmodels = "^0.13.5"
dask = "^2023.3.2"
plotly = "^5.14.0"
ipykernel = "^6.22.0"
openpyxl = "^3.1.2"
folium = "^0.14.0"
geopandas = "^0.12.2"
prophet = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
